<!--

   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.apache.commons</groupId>
     <artifactId>commons-parent</artifactId>
     <version>32</version>
  </parent>
  <groupId>org.apache.commons</groupId>
  <artifactId>commons-jcs</artifactId>
  <packaging>jar</packaging>
  <version>2.0-SNAPSHOT</version>
  <name>Commons JCS</name>
  <url>http://commons.apache.org/proper/commons-jcs/</url>
  <inceptionYear>2002</inceptionYear>

  <dependencies>

    <!--  For comparative performance tests only -->
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>1.4</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <!--  REQUIRED FOR JCS CORE -->
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.1</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>

    <!--  REQUIRED FOR JCS CORE -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.0</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <!--  JDBC DISK CACHE -->
    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <version>1.2.2</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <!--  JDBC DISK CACHE -->
    <dependency>
      <groupId>commons-pool</groupId>
      <artifactId>commons-pool</artifactId>
      <version>1.4</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <!--  REQUIRED FOR JCS CORE -->

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.0.4</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>1.7.3.3</version>
      <!-- <version>1.8.0.7</version> -->
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.12</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <!-- LGPL! -->
    <!--
    <dependency>
      <groupId>jgroups</groupId>
      <artifactId>jgroups-all</artifactId>
      <version>2.2.8</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    -->

    <dependency>
      <groupId>tomcat</groupId>
      <artifactId>tomcat-util</artifactId>
      <version>3.2.1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity-tools</artifactId>
      <version>2.0</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>xmlrpc</groupId>
      <artifactId>xmlrpc</artifactId>
      <version>2.0</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.6.2</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
      <version>2.0.2</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>berkeleydb</groupId>
      <artifactId>berkeleydb</artifactId>
      <version>1.5.1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
       <version>3.0.1</version>
       <type>jar</type>
       <scope>compile</scope>
       <optional>true</optional>
    </dependency>

    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.3</version>
       <type>jar</type>
       <scope>compile</scope>
       <optional>true</optional>
    </dependency>

  </dependencies>

  <!-- We don't use Continuum yet -->
  <!--
  <ciManagement>
    <system>continuum</system>
    <notifiers>
      <notifier>
        <configuration>
          <address>commons-dev@jakarta.apache.org</address>
        </configuration>
      </notifier>
    </notifiers>
  </ciManagement>
  -->

  <distributionManagement>
   <site>
      <id>stagingSite</id>
      <name>Apache Staging Website</name>
      <url>${jcs.deployment.protocol}://people.apache.org/www/commons.apache.org/jcs/</url>
   </site>
  </distributionManagement>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.apache.org/jira/browse/JCS</url>
  </issueManagement>

  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/commons/proper/jcs/trunk</connection>
    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/commons/proper/jcs/trunk</developerConnection>
    <url>http://svn.apache.org/viewvc/commons/proper/jcs/trunk</url>
  </scm>

  <mailingLists>
    <mailingList>
      <name>Jakarta JCS User List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-jcs-users/</archive>
    </mailingList>
    <mailingList>
      <name>Jakarta JCS Developer List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-jcs-dev/</archive>
    </mailingList>
    <mailingList>
      <name>OLD User List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-turbine-jcs-user/</archive>
    </mailingList>
    <mailingList>
      <name>OLD Developer List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-turbine-jcs-dev/</archive>
    </mailingList>
  </mailingLists>

  <developers>
    <developer>
      <id>asmuts</id>
      <name>Aaron Smuts</name>
      <email>asmuts@apache.org</email>
      <organization />
    </developer>
    <developer>
      <id>jtaylor</id>
      <name>James Taylor</name>
      <email>james@jamestaylor.org</email>
      <organization />
    </developer>
    <developer>
      <id>hchar</id>
      <name>Hanson Char</name>
      <email>hchar@apache.org</email>
      <organization />
    </developer>
    <developer>
      <id>tsavo</id>
      <name>Travis Savo</name>
      <email>tsavo@ifilm.com</email>
      <organization>IFilm</organization>
    </developer>
    <developer>
      <id>tv</id>
      <name>Thomas Vandahl</name>
      <email>tv@apache.org</email>
      <organization />
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Scott Eade</name>
      <email>seade@backstagetech.com.au</email>
    </contributor>
    <contributor>
      <name>Michael Stevens</name>
      <email>mstevens@etla.org</email>
    </contributor>
  </contributors>

  <build>
    <sourceDirectory>src/java</sourceDirectory>
    <testSourceDirectory>src/test</testSourceDirectory>
    <testResources>
        <testResource>
            <directory>src/test-conf</directory>
            <includes>
                <include>**/*.properties</include>
                <include>**/*.ccf</include>
            </includes>
        </testResource>
    </testResources>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${commons.surefire.version}</version>
          <configuration>
            <argLine>-Xmx256m -Djava.security.manager -Djava.security.policy=${basedir}/src/conf/cache.policy</argLine>
            <forkMode>pertest</forkMode>
            <includes>
                <include>**/*UnitTest.java</include>
            </includes>
            <excludes>
                <!--
                    Several of the test cases rely on background tasks that are timing
                    sensitive.
                -->
                <!-- You need to manually run these test cases. -->
                <exclude>**/BlockDiskElementDescriptorUnitTest.java</exclude>
                <exclude>**/HSQLDiskCacheConcurrentUnitTest.java</exclude>
                <exclude>**/HSQLDiskCacheUnitTest.java</exclude>
                <exclude>**/IndexedDiskCacheOptimizationUnitTest.java</exclude>
                <exclude>**/TestTCPLateralUnitTest.java</exclude>
                <exclude>**/UDPDiscoveryUnitTest.java</exclude>
                <!-- The ones that fail may be different for you. -->
                <!-- <exclude>**/JDBCDiskCacheRemovalUnitTest.java</exclude> -->
                <!-- <exclude>**/JDBCDiskCacheUnitTest.java</exclude> -->
            </excludes>
            <source>${maven.compiler.source}</source>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>rmic-maven-plugin</artifactId>
          <version>1.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- We need to generate some stub/skel classes with RMIC -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>rmic-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>rmic</id>
            <goals>
              <goal>rmic</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/RemoteCacheListener.class</include>
                <include>**/RemoteCacheServer.class</include>
              </includes>
              <outputDirectory>${project.build.outputDirectory}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <targetJdk>1.5</targetJdk>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>2.3.2</version>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>apache-release</id>
      <build>
        <plugins>
          <plugin>
            <!-- build the source and binary distribution packages -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
              <execution>
                <id>jcs-source-release-assembly</id>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                  <descriptors>
                    <descriptor>src/assembly/bin.xml</descriptor>
                    <descriptor>src/assembly/src.xml</descriptor>
                  </descriptors>
                  <tarLongFileFormat>gnu</tarLongFileFormat>
                </configuration>
              </execution>
            </executions>
          </plugin>      
        </plugins>
      </build>
    </profile>    
  </profiles>

  <properties>

    <!-- Default configuration for compiler source and target JVM -->
    <maven.compiler.sourceEncoding>UTF-8</maven.compiler.sourceEncoding>
  	<maven.compiler.source>1.5</maven.compiler.source>
  	<maven.compiler.target>1.5</maven.compiler.target>

  	<!--
      Make the deployment protocol pluggable. This allows to switch to
      other protocols like scpexe, which some users prefer over scp.
    -->
    <jcs.deployment.protocol>scpexe</jcs.deployment.protocol>

    <commons.componentid>jcs</commons.componentid>
    <commons.release.version>1.5</commons.release.version>
    <!-- The RC version used in the staging repository URL. -->
    <commons.rc.version>RC1</commons.rc.version>
    <commons.jira.id>JCS</commons.jira.id>
    <commons.site.path>commons-jcs</commons.site.path>
    <commons.scmPubUrl>https://svn.apache.org/repos/infra/websites/production/commons/content/proper/${commons.site.path}</commons.scmPubUrl>
    <!-- Ensure copies work OK (can be removed later when this is in parent POM) -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <commons.encoding>UTF-8</commons.encoding>
    <commons.javadoc.java.link>http://download.oracle.com/javase/1.5.0/docs/api/</commons.javadoc.java.link>

    <test.type>Unit</test.type>
  </properties>

</project>
